fix for scrolling behind menu and start of 'Herkunft' site

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -117,8 +117,7 @@
     transition: 0.5s;
 
     & ul {
-      margin-top: 251px;
-      margin-left: 60px;
+      margin: 251px 0 50px 60px;
       padding: 0;
       transition: 0.5s;
 
